tests/NormalTests/paczka1/fuzzy1/17005326.err
Error in line 2: InmAwf9R A886 8,8
Error in line 3: InmAwf9R S755 11,0
Error in line 1: GkqzVXy72du A886 14,7
Error in line 15: GkqzVXy72du A391 68,6
